--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,42 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home | Chris Panetta</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header>
+        <div class="container">
+            <h1>Chris Panetta</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Me</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact Me</a>
+                <a href="github.html">GitHub</a>
+            </nav>
+        </div>
+    </header>
+
+    <section id="home">
+        <div class="container">
+            <details>
+            <summary><h2>Welcome to My Portfolio</h2></summary>
+            <p>I'm Chris Panetta and I am in Networking & IT Security. To find out more about me, click on one of the options above.</p>
+        </details>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>Contact me at: <a href="mailto:chrispanetta@gmail.com">chrispanetta@gmail.com</p>
+            <p>&copy; 2024 Chris Panetta. All Rights Reserved.</p>
+        </div>
+    </footer>
+
+</body>
 </html>
