--- a/views/about.ejs
+++ b/views/about.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>About Me | Chris Panetta</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
     <header>
@@ -40,7 +40,13 @@
           allow="autoplay; fullscreen; picture-in-picture"
         ></iframe>
         <p>Below is a video about me</p>
-        <video width="500" height="500" controls preload poster="chris.jpg">
+        <video
+          width="500"
+          height="500"
+          controls
+          preload
+          poster="/images/chris.jpg"
+        >
           <source src="/images/chris.mp4" type="video/mp4" />
         </video>
       </div>
