--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,11 +13,11 @@
         <div class="container">
             <h1>Chris Panetta</h1>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Me</a>
-                <a href="projects.html">Projects</a>
-                <a href="contact.html">Contact Me</a>
-                <a href="github.html">GitHub</a>
+                <a href="index">Home</a>
+                <a href="about">About Me</a>
+                <a href="projects">Projects</a>
+                <a href="contact">Contact Me</a>
+                <a href="github">GitHub</a>
             </nav>
         </div>
     </header>
