--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,7 +13,7 @@
       <div class="container">
         <h1>Chris Panetta</h1>
         <nav>
-          <a href="index">Home</a>
+          <a href="/">Home</a>
           <a href="about">About Me</a>
           <a href="projects">Projects</a>
           <a href="contact">Contact Me</a>
