--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,61 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About Me | Chris Panetta</title>
-
-    <link rel="stylesheet" href="/stylesheets/style.css" />
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <h1>Chris Panetta</h1>
-        <nav>
-          <a href="/">Home</a>
-          <a href="about">About Me</a>
-          <a href="projects">Projects</a>
-          <a href="contact">Contact Me</a>
-          <a href="github">GitHub</a>
-        </nav>
-      </div>
-    </header>
-
-    <section id="about">
-      <div class="container">
-        <h2>About Me</h2>
-        <img src="/images/chris.jpg" alt="Chris Panetta" class="portrait" />
-        <p>
-          Hi, My name is Chris Panetta, and I love to code and work with
-          servers. I am pursuing a role in Networking and IT Security. Below is
-          my favourite spotify Playlist.
-        </p>
-        <!-- This code was taken from Spotify Embedding. It takes the code from the Spotify Source Generator and pulls the request from their embedder generator -->
-        <iframe
-          style="border-radius: 12px"
-          src="https://open.spotify.com/embed/playlist/6xPJM7WwnglzCT28GrMhiB?utm_source=generator"
-          width="100%"
-          height="152"
-          allow="autoplay; fullscreen; picture-in-picture"
-        ></iframe>
-        <p>Below is a video about me</p>
-        <video
-          width="500"
-          height="500"
-          controls
-          preload
-          poster="/images/chris.jpg"
-        >
-          <source src="/images/chris.mp4" type="video/mp4" />
-        </video>
-      </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <p>&copy; 2024 Chris Panetta. All Rights Reserved.</p>
-      </div>
-    </footer>
-  </body>
-</html>
+<section id="about">
+  <div class="container">
+    <h2>About Me</h2>
+    <img src="/images/chris.jpg" alt="Chris Panetta" class="portrait" />
+    <p>
+      Hi, My name is Chris Panetta, and I love to code and work with servers. I
+      am pursuing a role in Networking and IT Security. Below is my favourite
+      spotify Playlist.
+    </p>
+    <!-- This code was taken from Spotify Embedding. It takes the code from the Spotify Source Generator and pulls the request from their embedder generator -->
+    <iframe
+      style="border-radius: 12px"
+      src="https://open.spotify.com/embed/playlist/6xPJM7WwnglzCT28GrMhiB?utm_source=generator"
+      width="100%"
+      height="152"
+      allow="autoplay; fullscreen; picture-in-picture"
+    ></iframe>
+    <p>Below is a video about me</p>
+    <video width="500" height="500" controls preload poster="/images/chris.jpg">
+      <source src="/images/chris.mp4" type="video/mp4" />
+    </video>
+  </div>
+</section>
