--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,42 +1,17 @@
+<%- include('header') %>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Chris Panetta</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-<body>
+<section id="home" class="bg-white py-5">
+  <div class="container text-center">
+    <details>
+      <summary>
+        <h2 class="display-4 text-primary">Welcome to My Portfolio</h2>
+      </summary>
+      <p class="lead mt-3">
+        I'm Chris Panetta, and I specialize in Networking & IT Security. To find
+        out more about me, click on one of the options above.
+      </p>
+    </details>
+  </div>
+</section>
 
-    <header>
-        <div class="container">
-            <h1>Chris Panetta</h1>
-            <nav>
-                <a href="/">Home</a>
-                <a href="about">About Me</a>
-                <a href="projects">Projects</a>
-                <a href="contact">Contact Me</a>
-                <a href="github">GitHub</a>
-            </nav>
-        </div>
-    </header>
-
-    <section id="home">
-        <div class="container">
-            <details>
-            <summary><h2>Welcome to My Portfolio</h2></summary>
-            <p>I'm Chris Panetta and I am in Networking & IT Security. To find out more about me, click on one of the options above.</p>
-        </details>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container">
-            <p>Contact me at: <a href="mailto:chrispanetta@gmail.com">chrispanetta@gmail.com</p>
-            <p>&copy; 2024 Chris Panetta. All Rights Reserved.</p>
-        </div>
-    </footer>
-
-</body>
-</html>
+<%- include('footer') %>
