removed bootstrap and went back to custom, style.css checkpoint

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
     <div class="container">
-        <p>Contact me at: <a href="mailto:chrispanetta@gmail.com">chrispanetta@gmail.com</p>
+        <p>Contact me at: <a href="mailto:wsp@chrispanetta.com">wsp@chrispanetta.com</p>
         <p>&copy; 2024 Chris Panetta. All Rights Reserved.</p>
     </div>
 </footer>
