--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,4 @@
+<%- include('header') %>
 <section id="about">
   <div class="container">
     <h2>About Me</h2>
@@ -21,3 +22,4 @@
     </video>
   </div>
 </section>
+<%- include('footer') %>
