--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,4 @@
+<%- include('header') %>
 <section id="contact">
   <div class="container">
     <h2>Contact Me</h2>
@@ -59,3 +60,4 @@
     </form>
   </div>
 </section>
+<%- include('footer') %>
