--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,3 +1,4 @@
+<%- include('header') %>
 <section id="projects">
   <div class="container">
     <h2>Projects</h2>
@@ -41,3 +42,4 @@
     </article>
   </div>
 </section>
+<%- include('footer') %>
