--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,20 +3,27 @@
   <div class="container">
     <h2>About Me</h2>
     <img src="/images/chris.jpg" alt="Chris Panetta" class="portrait" />
+    <br />
     <p>
       Hi, My name is Chris Panetta, and I love to code and work with servers. I
       am pursuing a role in Networking and IT Security. Below is my favourite
       spotify Playlist.
     </p>
+    <br />
     <!-- This code was taken from Spotify Embedding. It takes the code from the Spotify Source Generator and pulls the request from their embedder generator -->
     <iframe
       style="border-radius: 12px"
-      src="https://open.spotify.com/embed/playlist/6xPJM7WwnglzCT28GrMhiB?utm_source=generator"
+      src="https://open.spotify.com/embed/playlist/6xPJM7WwnglzCT28GrMhiB?utm_source=generator&theme=0"
       width="100%"
       height="152"
-      allow="autoplay; fullscreen; picture-in-picture"
+      frameBorder="0"
+      allowfullscreen=""
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy"
     ></iframe>
+    <br />
     <p>Below is a video about me</p>
+    <br />
     <video width="500" height="500" controls preload poster="/images/chris.jpg">
       <source src="/images/chris.mp4" type="video/mp4" />
     </video>
