--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -55,8 +55,11 @@
       <br />
       <label for="bsf"> Am I your Best Friend Forever?</label>
       <input type="checkbox" name="bsf" />
-      <input type="submit" value="Submit" />
-      <input type="reset" value="Reset" />
+
+      <div class="button-group">
+        <input type="submit" value="Submit" />
+        <input type="reset" value="Reset" />
+      </div>
     </form>
   </div>
 </section>
