--- a/views/github.ejs
+++ b/views/github.ejs
@@ -2,14 +2,11 @@
 <section id="about">
   <div class="container">
     <h2>GitHub</h2>
-    <p>The GitHub of this page can be found below:</p>
-    <a href="https://github.com/Chris4285/WSP-Assigment-1">GitHub Page</a>
-    <iframe
-      src="https://github.com/Chris4285/WSP-Assigment-1"
-      title="Chris Panetta's Website"
-      allowfullscreen
-      class="website"
-    ></iframe>
+    <p>The GitHub repository for this page can be found below:</p>
+    <br />
+    <a href="https://github.com/Chris4285/WSP-Assigment-1" target="_blank"
+      >Visit GitHub Repository</a
+    >
   </div>
 </section>
 <%- include('footer') %>
