--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
+    <div class="wrapper">
     <header>
       <div class="container">
         <h1>Chris Panetta</h1>
