--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -31,12 +31,21 @@
         <br />
       </section>
       <section>
-        <h3>NGINX Manager</h3>
+        <h3>FreshRSS Feed</h3>
+        <p>
+          The FreshRSS Feed is a web application that allows users to create and
+          manage RSS feeds. The application is built using the React framework.
+          I self hosted the application.
+        </p>
+        <br />
+        <p>Username is Chris and Password is dfm_nqp6muq0wxc!NFJ</p>
+        <br />
         <iframe
-          src="https://nginx.chrispanetta.com/"
-          title="Chris Panetta's Website"
+          src="https://freshrss.chrispanetta.com/"
+          title="FreshRSS Feed"
           allowfullscreen
-          class="website"
+          height="800px"
+          width="500px"
         ></iframe>
       </section>
     </article>
