--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,9 +1,12 @@
 <footer>
     <div class="container">
-        <p>Contact me at: <a href="mailto:wsp@chrispanetta.com">wsp@chrispanetta.com</p>
+        <p>Contact me at: <a href="mailto:wsp@chrispanetta.com">wsp@chrispanetta.com</a></p>
+        <p>
+            <a href="https://github.chrispanetta.com/Chris4285" target="_blank">GitHub</a> | 
+            <a href="linkedin.chrispanetta.com" target="_blank">LinkedIn</a>
+        </p>
         <p>&copy; 2024 Chris Panetta. All Rights Reserved.</p>
     </div>
 </footer>
-
 </body>
 </html>
