--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
 <%- include('header') %>
 
-<section id="home">
-  <div class="container">
+<section id="home" class="bg-white py-5">
+  <div class="container text-center">
     <details>
-      <summary><h2>Welcome to My Portfolio</h2></summary>
-      <p>
-        I'm Chris Panetta and I am in Networking & IT Security. To find out more
-        about me, click on one of the options above.
+      <summary>
+        <h2 class="display-4 text-primary">Welcome to My Portfolio</h2>
+      </summary>
+      <p class="lead mt-3">
+        I'm Chris Panetta, and I specialize in Networking & IT Security. To find
+        out more about me, click on one of the options above.
       </p>
     </details>
   </div>
