--- a/views/github.ejs
+++ b/views/github.ejs
@@ -1,10 +1,13 @@
 <%- include('header') %>
-<section id="about">
-  <div class="container">
-    <h2>GitHub</h2>
+<section id="about" class="py-5">
+  <div class="container text-center">
+    <h2 class="mb-4">GitHub</h2>
     <p>The GitHub repository for this page can be found below:</p>
     <br />
-    <a href="https://github.com/chrispan0/WSP-Assignment-2" target="_blank"
+    <a
+      href="https://github.com/chrispan0/WSP-Assignment-2"
+      target="_blank"
+      class="btn btn-primary"
       >Visit GitHub Repository</a
     >
   </div>
